--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,11 +1,23 @@
 server {
 
-    listen 80 default_server;
+    listen 80;
     listen [::]:80 default_server ipv6only=on;
+
+    server_name localhost;
+    return 301 https://localhost;
+}
+
+server {
+
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server ipv6only=on;
 
     server_name localhost;
     root /var/www/public;
     index index.php index.html index.htm;
+
+    ssl_certificate     /etc/nginx/ssl/localhost.crt;
+    ssl_certificate_key /etc/nginx/ssl/localhost.key;
 
     location / {
          try_files $uri $uri/ /index.php$is_args$args;
