[CHANGE] revise nginx server name to dev.larave

--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80 default_server ipv6only=on;
 
-    server_name localhost;
+    server_name dev.laravel;
     return 301 https://localhost;
 }
 
@@ -12,7 +12,7 @@ server {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server ipv6only=on;
 
-    server_name localhost;
+    server_name dev.laravel;
     root /var/www/public;
     index index.php index.html index.htm;
 
