--- a/.env-dev
+++ b/.env-dev
@@ -90,9 +90,9 @@ PHP_SOCKET=php-fpm:9000
 
 ### MYSQL ##############################################################################################################
 
-MYSQL_DATABASE=default
-MYSQL_USER=default
-MYSQL_PASSWORD=secret
+MYSQL_DATABASE=blog
+MYSQL_USER=blog
+MYSQL_PASSWORD=wuming1q2w
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 
