[NEW] add fluentd

--- a/.env-dev
+++ b/.env-dev
@@ -39,7 +39,7 @@ WORKSPACE_INSTALL_DRUSH=false
 WORKSPACE_INSTALL_AEROSPIKE=false
 WORKSPACE_INSTALL_V8JS=false
 WORKSPACE_COMPOSER_GLOBAL_INSTALL=false
-WORKSPACE_INSTALL_WORKSPACE_SSH=false
+WORKSPACE_INSTALL_WORKSPACE_SSH=true
 WORKSPACE_INSTALL_LARAVEL_ENVOY=false
 WORKSPACE_INSTALL_LARAVEL_INSTALLER=false
 WORKSPACE_INSTALL_DEPLOYER=false
@@ -78,6 +78,11 @@ NGINX_HOST_HTTP_PORT=80
 NGINX_HOST_HTTPS_PORT=443
 NGINX_HOST_LOG_PATH=./logs/nginx/
 NGINX_SITES_PATH=./nginx/sites/
+
+### FLUENTD ############################################################################################################
+
+FLUENTD_PORT=24224
+FLUENTD_CONF_PATH=./fluentd/
 
 ### APACHE #############################################################################################################
 
