--- a/.env-stage
+++ b/.env-stage
@@ -79,6 +79,11 @@ NGINX_HOST_HTTPS_PORT=443
 NGINX_HOST_LOG_PATH=./logs/nginx/
 NGINX_SITES_PATH=./nginx/sites/
 
+### FLUENTD ############################################################################################################
+
+FLUENTD_PORT=24224
+FLUENTD_CONF_PATH=./fluentd/
+
 ### APACHE #############################################################################################################
 
 APACHE_HOST_HTTP_PORT=80
