--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,8 +120,33 @@ services:
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
+      links:
+        - fluentd
+      logging:
+        driver: "fluentd"
+        options:
+          fluentd-address: localhost:24224
+          tag: nginx.access
       depends_on:
         - php-fpm
+      networks:
+        - frontend
+        - backend
+
+### Fluentd Container #################################
+
+    fluentd:
+      build:
+        context: ./fluentd
+      volumes_from:
+        - applications
+      volumes:
+        - ${FLUENTD_CONF_PATH}:/fluentd/etc
+      links:
+        - "elasticsearch"
+      ports:
+        - "${FLUENTD_PORT}:24224"
+        - "${FLUENTD_PORT}:24224/udp"
       networks:
         - frontend
         - backend
@@ -477,6 +502,8 @@ services:
         - cluster.name=laradock-cluster
         - bootstrap.memory_lock=true
         - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+        - xpack.security.enabled=false
+        - xpack.watcher.enabled=false
       ulimits:
         memlock:
           soft: -1
@@ -498,6 +525,9 @@ services:
       build: ./kibana
       ports:
         - "${KIBANA_HTTP_PORT}:5601"
+      environment:
+        - xpack.security.enabled=false
+        - xpack.watcher.enabled=false
       depends_on:
         - elasticsearch
       networks:
