--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -4,14 +4,14 @@
   port 24224
   bind 0.0.0.0
 </source>
-<match *.**>
+<match nginx.access>
   @type copy
   <store>
     @type elasticsearch
     host elasticsearch
     port 9200
     logstash_format true
-    logstash_prefix fluentd
+    logstash_prefix nginx_access
     logstash_dateformat %Y%m%d
     include_tag_key true
     type_name access_log
