[NEW] add ssl into laravel echo server

--- a/laravel-echo-server/Dockerfile
+++ b/laravel-echo-server/Dockerfile
@@ -10,6 +10,10 @@ RUN npm install
  
 # Bundle app source
 COPY laravel-echo-server.json /usr/src/app/laravel-echo-server.json
- 
+
+RUN mkdir -p /usr/src/app/ssl
+COPY ssl.crt /usr/src/app/ssl/ssl.crt
+COPY ssl.key /usr/src/app/ssl/ssl.key
+
 EXPOSE 3000
 CMD [ "npm", "start" ]
